Addition of resources